bindings/c/whiteout_m2.h

/* ── Opaque handles ───────────────────────────────────────── */

typedef struct whiteout_M2CompatQuaternion whiteout_M2CompatQuaternion;
typedef struct whiteout_M2ColorBGRA whiteout_M2ColorBGRA;
typedef struct whiteout_M2Extent whiteout_M2Extent;
typedef struct whiteout_M2KeySpanRef whiteout_M2KeySpanRef;
typedef struct whiteout_M2AnimationTrackBase whiteout_M2AnimationTrackBase;
typedef struct whiteout_M2ParticleEmitterExtension whiteout_M2ParticleEmitterExtension;
/* ── M2CompatQuaternion ─────────────────────────────────────────────── */

whiteout_M2CompatQuaternion* whiteout_m2_M2CompatQuaternion_new(void);
void whiteout_m2_M2CompatQuaternion_delete(whiteout_M2CompatQuaternion* self);
/* ── M2ColorBGRA ─────────────────────────────────────────────── */

whiteout_M2ColorBGRA* whiteout_m2_M2ColorBGRA_new(void);
void whiteout_m2_M2ColorBGRA_delete(whiteout_M2ColorBGRA* self);
/* ── M2Extent ─────────────────────────────────────────────── */

whiteout_M2Extent* whiteout_m2_M2Extent_new(void);
void whiteout_m2_M2Extent_delete(whiteout_M2Extent* self);
whiteout_Vector3f* whiteout_m2_M2Extent_get_minimum(whiteout_M2Extent* self);
void whiteout_m2_M2Extent_set_minimum(whiteout_M2Extent* self, const whiteout_Vector3f* value);
whiteout_Vector3f* whiteout_m2_M2Extent_get_maximum(whiteout_M2Extent* self);
void whiteout_m2_M2Extent_set_maximum(whiteout_M2Extent* self, const whiteout_Vector3f* value);
float whiteout_m2_M2Extent_get_sphereRadius(const whiteout_M2Extent* self);
void whiteout_m2_M2Extent_set_sphereRadius(whiteout_M2Extent* self, float value);
/* ── M2KeySpanRef ─────────────────────────────────────────────── */

/* One sequence's slice of a key array, as the file writes it: a count and an offset into whichever file holds that sequence's keys. */
/*  */
/* Kept only by a lazily parsed model (Parser::setLazyAnimations), which leaves the sub-arrays of externally-stored sequences empty until loadSequence() reads their `.anim` sibling. Nothing else needs it: an eager parse consumes the reference on the spot. */
whiteout_M2KeySpanRef* whiteout_m2_M2KeySpanRef_new(void);
void whiteout_m2_M2KeySpanRef_delete(whiteout_M2KeySpanRef* self);
uint32_t whiteout_m2_M2KeySpanRef_get_count(const whiteout_M2KeySpanRef* self);
void whiteout_m2_M2KeySpanRef_set_count(whiteout_M2KeySpanRef* self, uint32_t value);
uint32_t whiteout_m2_M2KeySpanRef_get_offset(const whiteout_M2KeySpanRef* self);
void whiteout_m2_M2KeySpanRef_set_offset(whiteout_M2KeySpanRef* self, uint32_t value);
/* ── M2AnimationTrackBase ─────────────────────────────────────────────── */

whiteout_M2AnimationTrackBase* whiteout_m2_M2AnimationTrackBase_new(void);
void whiteout_m2_M2AnimationTrackBase_delete(whiteout_M2AnimationTrackBase* self);
int32_t whiteout_m2_M2AnimationTrackBase_get_interpolationType(const whiteout_M2AnimationTrackBase* self);
void whiteout_m2_M2AnimationTrackBase_set_interpolationType(whiteout_M2AnimationTrackBase* self, int32_t value);
uint16_t whiteout_m2_M2AnimationTrackBase_get_globalSequenceId(const whiteout_M2AnimationTrackBase* self);
void whiteout_m2_M2AnimationTrackBase_set_globalSequenceId(whiteout_M2AnimationTrackBase* self, uint16_t value);
size_t whiteout_m2_M2AnimationTrackBase_get_timestamps_count(const whiteout_M2AnimationTrackBase* self);
size_t whiteout_m2_M2AnimationTrackBase_get_timestamps_inner_count(const whiteout_M2AnimationTrackBase* self, size_t outer_idx);
void whiteout_m2_M2AnimationTrackBase_resize_timestamps(whiteout_M2AnimationTrackBase* self, size_t count);
void whiteout_m2_M2AnimationTrackBase_resize_timestamps_inner(whiteout_M2AnimationTrackBase* self, size_t outer_idx, size_t inner_count);
const uint32_t* whiteout_m2_M2AnimationTrackBase_get_timestamps_inner_data(const whiteout_M2AnimationTrackBase* self, size_t outer_idx);
void whiteout_m2_M2AnimationTrackBase_assign_timestamps_inner(whiteout_M2AnimationTrackBase* self, size_t outer_idx, const uint32_t* data, size_t count);
/* ── M2ParticleEmitterExtension ─────────────────────────────────────────────── */

whiteout_M2ParticleEmitterExtension* whiteout_m2_M2ParticleEmitterExtension_new(void);
void whiteout_m2_M2ParticleEmitterExtension_delete(whiteout_M2ParticleEmitterExtension* self);
float whiteout_m2_M2ParticleEmitterExtension_get_zSource(const whiteout_M2ParticleEmitterExtension* self);
void whiteout_m2_M2ParticleEmitterExtension_set_zSource(whiteout_M2ParticleEmitterExtension* self, float value);
float whiteout_m2_M2ParticleEmitterExtension_get_colorMult(const whiteout_M2ParticleEmitterExtension* self);
void whiteout_m2_M2ParticleEmitterExtension_set_colorMult(whiteout_M2ParticleEmitterExtension* self, float value);
float whiteout_m2_M2ParticleEmitterExtension_get_alphaMult(const whiteout_M2ParticleEmitterExtension* self);
void whiteout_m2_M2ParticleEmitterExtension_set_alphaMult(whiteout_M2ParticleEmitterExtension* self, float value);