bindings/java/src/main/java/whiteout/m2/internal/Native.java

// SPDX-License-Identifier: BSD-3-Clause
// AUTOGENERATED by tools/codegen/emit_java.py - do not edit.
package whiteout.m2.internal;

import java.lang.foreign.*;
import java.lang.invoke.MethodHandle;
import whiteout.common.internal.NativeCommon;

/** FFM MethodHandle registry for this module. Internal — for codegen use. */
public final class Native {
    private Native() {}

    public static final MemoryLayout BYTES_LAYOUT = NativeCommon.BYTES_LAYOUT;
    public static final MemoryLayout CSTRING_LAYOUT = NativeCommon.CSTRING_LAYOUT;
    public static final MethodHandle whiteout_Bytes_free = NativeCommon.whiteout_Bytes_free;
    public static final MethodHandle whiteout_CString_free = NativeCommon.whiteout_CString_free;

    static MethodHandle find(String name, FunctionDescriptor fd) {
        return NativeCommon.find(name, fd);
    }

    // -- M2CompatQuaternion --
    public static final MethodHandle whiteout_m2_M2CompatQuaternion_new = find(
        "whiteout_m2_M2CompatQuaternion_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2CompatQuaternion_delete = find(
        "whiteout_m2_M2CompatQuaternion_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));

    // -- M2ColorBGRA --
    public static final MethodHandle whiteout_m2_M2ColorBGRA_new = find(
        "whiteout_m2_M2ColorBGRA_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2ColorBGRA_delete = find(
        "whiteout_m2_M2ColorBGRA_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));

    // -- M2Extent --
    public static final MethodHandle whiteout_m2_M2Extent_new = find(
        "whiteout_m2_M2Extent_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Extent_delete = find(
        "whiteout_m2_M2Extent_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Extent_get_minimum = find("whiteout_m2_M2Extent_get_minimum", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Extent_set_minimum = find("whiteout_m2_M2Extent_set_minimum", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Extent_get_maximum = find("whiteout_m2_M2Extent_get_maximum", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Extent_set_maximum = find("whiteout_m2_M2Extent_set_maximum", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Extent_get_sphereRadius = find("whiteout_m2_M2Extent_get_sphereRadius", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Extent_set_sphereRadius = find("whiteout_m2_M2Extent_set_sphereRadius", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));

    // -- M2KeySpanRef --
    public static final MethodHandle whiteout_m2_M2KeySpanRef_new = find(
        "whiteout_m2_M2KeySpanRef_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2KeySpanRef_delete = find(
        "whiteout_m2_M2KeySpanRef_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2KeySpanRef_get_count = find("whiteout_m2_M2KeySpanRef_get_count", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2KeySpanRef_set_count = find("whiteout_m2_M2KeySpanRef_set_count", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_m2_M2KeySpanRef_get_offset = find("whiteout_m2_M2KeySpanRef_get_offset", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2KeySpanRef_set_offset = find("whiteout_m2_M2KeySpanRef_set_offset", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));

    // -- M2AnimationTrackBase --
    public static final MethodHandle whiteout_m2_M2AnimationTrackBase_new = find(
        "whiteout_m2_M2AnimationTrackBase_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2AnimationTrackBase_delete = find(
        "whiteout_m2_M2AnimationTrackBase_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2AnimationTrackBase_get_interpolationType = find("whiteout_m2_M2AnimationTrackBase_get_interpolationType", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2AnimationTrackBase_set_interpolationType = find("whiteout_m2_M2AnimationTrackBase_set_interpolationType", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_m2_M2AnimationTrackBase_get_globalSequenceId = find("whiteout_m2_M2AnimationTrackBase_get_globalSequenceId", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2AnimationTrackBase_set_globalSequenceId = find("whiteout_m2_M2AnimationTrackBase_set_globalSequenceId", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2AnimationTrackBase_get_timestamps_count = find("whiteout_m2_M2AnimationTrackBase_get_timestamps_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2AnimationTrackBase_get_timestamps_inner_count = find("whiteout_m2_M2AnimationTrackBase_get_timestamps_inner_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2AnimationTrackBase_resize_timestamps = find("whiteout_m2_M2AnimationTrackBase_resize_timestamps", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2AnimationTrackBase_resize_timestamps_inner = find("whiteout_m2_M2AnimationTrackBase_resize_timestamps_inner", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2AnimationTrackBase_get_timestamps_inner_data = find("whiteout_m2_M2AnimationTrackBase_get_timestamps_inner_data", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2AnimationTrackBase_assign_timestamps_inner = find("whiteout_m2_M2AnimationTrackBase_assign_timestamps_inner", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));

    // -- M2ParticleEmitterExtension --
    public static final MethodHandle whiteout_m2_M2ParticleEmitterExtension_new = find(
        "whiteout_m2_M2ParticleEmitterExtension_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2ParticleEmitterExtension_delete = find(
        "whiteout_m2_M2ParticleEmitterExtension_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2ParticleEmitterExtension_get_zSource = find("whiteout_m2_M2ParticleEmitterExtension_get_zSource", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2ParticleEmitterExtension_set_zSource = find("whiteout_m2_M2ParticleEmitterExtension_set_zSource", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_m2_M2ParticleEmitterExtension_get_colorMult = find("whiteout_m2_M2ParticleEmitterExtension_get_colorMult", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2ParticleEmitterExtension_set_colorMult = find("whiteout_m2_M2ParticleEmitterExtension_set_colorMult", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_m2_M2ParticleEmitterExtension_get_alphaMult = find("whiteout_m2_M2ParticleEmitterExtension_get_alphaMult", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2ParticleEmitterExtension_set_alphaMult = find("whiteout_m2_M2ParticleEmitterExtension_set_alphaMult", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
